Update 5/9/2025, 11:20PM: Fixed code, need to test combinations